# cubeheatmap

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml
cubeheatmap/: __init__.py  heatmap.py  render.py  style.py
cubeheatmap/presets/: __init__.py  citations.py  dependencies.py  pipeline.py  social.py  webgraph.py
docs/: examples.md  usage.md
examples/: 01_from_matrix.py  02_from_dataframe.py  03_top_n_rows.py  04_annotated.py  05_sig_mask.py  06_grid.py  07_rounded.py  08_dark_theme.py  09_citation_network.py  10_dependencies.py  11_pipeline.py  12_correlation.py  13_survey.py  14_model_comparison.py  15_webgraph.py  16_dense_microarray.py  generate_all.py
tests/: test_heatmap.py  test_render.py  test_style.py
