[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cubeheatmap"
version = "0.1.0"
description = "Publication-quality square-cell heatmap visualisation for matplotlib"
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "dam2452" },
]
keywords = [
    "heatmap",
    "visualization",
    "matplotlib",
    "publication-figures",
    "data-visualization",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/dam2452/cubeheatmap"
Issues = "https://github.com/dam2452/cubeheatmap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cubeheatmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
